prevented icon distortion in ViewerCard/Line

--- a/src/components/view/ViewerPageLine.module.css
+++ b/src/components/view/ViewerPageLine.module.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-size: cover;
   margin-right: var(--basis);
+  flex-shrink: 0;
 }
 .title {
   vertical-align: middle;
